[package]
name = "contracts_manager"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_prelude = { version = "3.0.0",  default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
free_for_all_signup_gatekeeper= { version = "0.1.0", path = "../gatekeepers/free_for_all_signup_gatekeeper", default-features = false, features = ["ink-as-dependency"] }
signup_token_gatekeeper= { version = "0.1.0", path = "../gatekeepers/signup_token_gatekeeper", default-features = false, features = ["ink-as-dependency"] }
constant_initial_voice_credit_proxy= { version = "0.1.0", path = "../initial_voice_credit_proxy/constant_initial_voice_credit_proxy", default-features = false, features = ["ink-as-dependency"] }
user_defined_initial_voice_credit_proxy= { version = "0.1.0", path = "../initial_voice_credit_proxy/user_defined_initial_voice_credit_proxy", default-features = false, features = ["ink-as-dependency"] }
signup_token= { version = "4.0.0-alpha.3", path = "../signup_token", default-features = false, features = ["ink-as-dependency"] }
versatile_verifier= { version = "0.1.0", path = "../versatile_verifier", default-features = false, features = ["ink-as-dependency"] }
maci= { version = "0.1.0", path = "../maci", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "contracts_manager"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
[profile.release]
overflow-checks = false