[package]
name = "quin_merkle_tree"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.3", default-features = false }
ink_metadata = { version = "3.3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3", default-features = false }
ink_storage = { version = "3.3", default-features = false }
ink_lang = { version = "3.3", default-features = false }
ink_prelude = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
substrate-bn = { version = "0.6.0" }
hex-literal = "0.3.4"
dusk-poseidon = { version = "0.22.0", default-features = false }
dusk-bls12_381 = {version = "0.8.0", default-features = false}
[lib]
name = "quin_merkle_tree"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "dusk-poseidon/std",
    "dusk-bls12_381/std",
]
ink-as-dependency = []
[profile.release]
overflow-checks = false